wip website, initial setup

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "chalk": "^2.4.2",
     "feather-icons": "^4.17.0",
     "fs-extra": "^7.0.1",
-    "hyperapp": "^1.2.9"
+    "hyperapp": "^1.2.9",
+    "modern-normalize": "^0.5.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
