--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "feather-icons": "^4.17.0",
     "hyperapp": "^1.2.9",
+    "marked": "^0.6.1",
     "modern-normalize": "^0.5.0"
   },
   "devDependencies": {
